AST/ANTLRFiles/LixirParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Lixir.g4 by ANTLR 4.9.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.1")]
[System.CLSCompliant(false)]
public partial class LixirParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		PRINT=1, METHOD=2, IS=3, ADD=4, OF=5, REMOVE=6, NAME_PROP=7, VALUE_PROP=8, 
		HAS=9, OPEN_METH=10, SAVE_METH=11, IF=12, ELSE=13, FOR=14, IN=15, RETURN=16, 
		DOCUMENT=17, NODE=18, ATTRIBUTE=19, STRING=20, INT=21, SEMICOLON=22, OPEN_BRACKET=23, 
		CLOSE_BRACKET=24, QUOTE=25, EQUALS=26, GT=27, LT=28, COMMA=29, DOUBLE_DOT=30, 
		PLUS=31, MINUS=32, MULTIPLY=33, DIVISION=34, VALID_NAME=35, VALID_INTEGER=36, 
		STRING_LINE=37, WS=38;
	public const int
		RULE_lixir_parser = 0, RULE_code = 1, RULE_type = 2, RULE_type_literal = 3, 
		RULE_instruction = 4, RULE_variable_declaration = 5, RULE_variable_manipulation = 6, 
		RULE_method_call = 7, RULE_mathematics = 8, RULE_conditional_instruction = 9, 
		RULE_boolean_instruction = 10, RULE_boolean_operator = 11, RULE_loop_instruction = 12, 
		RULE_range_operator = 13, RULE_return_instruction = 14, RULE_method = 15, 
		RULE_method_variable = 16, RULE_code_block = 17, RULE_node_literal = 18, 
		RULE_attribute_literal = 19;
	public static readonly string[] ruleNames = {
		"lixir_parser", "code", "type", "type_literal", "instruction", "variable_declaration", 
		"variable_manipulation", "method_call", "mathematics", "conditional_instruction", 
		"boolean_instruction", "boolean_operator", "loop_instruction", "range_operator", 
		"return_instruction", "method", "method_variable", "code_block", "node_literal", 
		"attribute_literal"
	};

	private static readonly string[] _LiteralNames = {
		null, "'print'", "'meth'", "'.is'", "'.add'", "'of'", "'.remove'", "'.name'", 
		"'.value'", "'.has'", "'.Open'", "'.Save'", "'if'", "'else'", "'for'", 
		"'in'", "'return'", "'Document'", "'Node'", "'Attribute'", "'String'", 
		"'Int'", "':'", "'('", "')'", "'\"'", "'='", "'>'", "'<'", "','", "'..'", 
		"'+'", "'-'", "'*'", "'/'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "PRINT", "METHOD", "IS", "ADD", "OF", "REMOVE", "NAME_PROP", "VALUE_PROP", 
		"HAS", "OPEN_METH", "SAVE_METH", "IF", "ELSE", "FOR", "IN", "RETURN", 
		"DOCUMENT", "NODE", "ATTRIBUTE", "STRING", "INT", "SEMICOLON", "OPEN_BRACKET", 
		"CLOSE_BRACKET", "QUOTE", "EQUALS", "GT", "LT", "COMMA", "DOUBLE_DOT", 
		"PLUS", "MINUS", "MULTIPLY", "DIVISION", "VALID_NAME", "VALID_INTEGER", 
		"STRING_LINE", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Lixir.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static LixirParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public LixirParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LixirParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Lixir_parserContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(LixirParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CodeContext[] code() {
			return GetRuleContexts<CodeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CodeContext code(int i) {
			return GetRuleContext<CodeContext>(i);
		}
		public Lixir_parserContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lixir_parser; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILixirVisitor<TResult> typedVisitor = visitor as ILixirVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLixir_parser(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Lixir_parserContext lixir_parser() {
		Lixir_parserContext _localctx = new Lixir_parserContext(Context, State);
		EnterRule(_localctx, 0, RULE_lixir_parser);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << METHOD) | (1L << IF) | (1L << FOR) | (1L << RETURN) | (1L << VALID_NAME))) != 0)) {
				{
				{
				State = 40;
				code();
				}
				}
				State = 45;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 46;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CodeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public InstructionContext instruction() {
			return GetRuleContext<InstructionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MethodContext method() {
			return GetRuleContext<MethodContext>(0);
		}
		public CodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_code; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILixirVisitor<TResult> typedVisitor = visitor as ILixirVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCode(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CodeContext code() {
		CodeContext _localctx = new CodeContext(Context, State);
		EnterRule(_localctx, 2, RULE_code);
		try {
			State = 50;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IF:
			case FOR:
			case RETURN:
			case VALID_NAME:
				EnterOuterAlt(_localctx, 1);
				{
				State = 48;
				instruction();
				}
				break;
			case METHOD:
				EnterOuterAlt(_localctx, 2);
				{
				State = 49;
				method();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOCUMENT() { return GetToken(LixirParser.DOCUMENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NODE() { return GetToken(LixirParser.NODE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ATTRIBUTE() { return GetToken(LixirParser.ATTRIBUTE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(LixirParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(LixirParser.INT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILixirVisitor<TResult> typedVisitor = visitor as ILixirVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(Context, State);
		EnterRule(_localctx, 4, RULE_type);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DOCUMENT) | (1L << NODE) | (1L << ATTRIBUTE) | (1L << STRING) | (1L << INT))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Type_literalContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Node_literalContext node_literal() {
			return GetRuleContext<Node_literalContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Attribute_literalContext attribute_literal() {
			return GetRuleContext<Attribute_literalContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LINE() { return GetToken(LixirParser.STRING_LINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VALID_INTEGER() { return GetToken(LixirParser.VALID_INTEGER, 0); }
		public Type_literalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type_literal; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILixirVisitor<TResult> typedVisitor = visitor as ILixirVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType_literal(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Type_literalContext type_literal() {
		Type_literalContext _localctx = new Type_literalContext(Context, State);
		EnterRule(_localctx, 6, RULE_type_literal);
		try {
			State = 58;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 54;
				node_literal();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 55;
				attribute_literal();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 56;
				Match(STRING_LINE);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 57;
				Match(VALID_INTEGER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstructionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Variable_declarationContext variable_declaration() {
			return GetRuleContext<Variable_declarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Conditional_instructionContext conditional_instruction() {
			return GetRuleContext<Conditional_instructionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Loop_instructionContext loop_instruction() {
			return GetRuleContext<Loop_instructionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Variable_manipulationContext variable_manipulation() {
			return GetRuleContext<Variable_manipulationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Return_instructionContext return_instruction() {
			return GetRuleContext<Return_instructionContext>(0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruction; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILixirVisitor<TResult> typedVisitor = visitor as ILixirVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstruction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstructionContext instruction() {
		InstructionContext _localctx = new InstructionContext(Context, State);
		EnterRule(_localctx, 8, RULE_instruction);
		try {
			State = 65;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 60;
				variable_declaration();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 61;
				conditional_instruction();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 62;
				loop_instruction();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 63;
				variable_manipulation();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 64;
				return_instruction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Variable_declarationContext : ParserRuleContext {
		public IToken var_type;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] VALID_NAME() { return GetTokens(LixirParser.VALID_NAME); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VALID_NAME(int i) {
			return GetToken(LixirParser.VALID_NAME, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IS() { return GetToken(LixirParser.IS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LINE() { return GetToken(LixirParser.STRING_LINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VALID_INTEGER() { return GetToken(LixirParser.VALID_INTEGER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NODE() { return GetToken(LixirParser.NODE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ATTRIBUTE() { return GetToken(LixirParser.ATTRIBUTE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Node_literalContext node_literal() {
			return GetRuleContext<Node_literalContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Attribute_literalContext attribute_literal() {
			return GetRuleContext<Attribute_literalContext>(0);
		}
		public Variable_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variable_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILixirVisitor<TResult> typedVisitor = visitor as ILixirVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariable_declaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Variable_declarationContext variable_declaration() {
		Variable_declarationContext _localctx = new Variable_declarationContext(Context, State);
		EnterRule(_localctx, 10, RULE_variable_declaration);
		int _la;
		try {
			State = 80;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 67;
				Match(VALID_NAME);
				State = 68;
				Match(IS);
				State = 69;
				_localctx.var_type = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==VALID_INTEGER || _la==STRING_LINE) ) {
					_localctx.var_type = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 70;
				Match(VALID_NAME);
				State = 71;
				Match(IS);
				State = 72;
				_localctx.var_type = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==NODE || _la==ATTRIBUTE) ) {
					_localctx.var_type = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 75;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
				case 1:
					{
					State = 73;
					node_literal();
					}
					break;
				case 2:
					{
					State = 74;
					attribute_literal();
					}
					break;
				}
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 77;
				Match(VALID_NAME);
				State = 78;
				Match(IS);
				State = 79;
				Match(VALID_NAME);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Variable_manipulationContext : ParserRuleContext {
		public Variable_manipulationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variable_manipulation; } }
	 
		public Variable_manipulationContext() { }
		public virtual void CopyFrom(Variable_manipulationContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class VARIABLE_INNER_METHODContext : Variable_manipulationContext {
		public IToken inner_method;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VALID_NAME() { return GetToken(LixirParser.VALID_NAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LINE() { return GetToken(LixirParser.STRING_LINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_METH() { return GetToken(LixirParser.OPEN_METH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SAVE_METH() { return GetToken(LixirParser.SAVE_METH, 0); }
		public VARIABLE_INNER_METHODContext(Variable_manipulationContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILixirVisitor<TResult> typedVisitor = visitor as ILixirVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVARIABLE_INNER_METHOD(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VARIABLE_ADD_CHILDContext : Variable_manipulationContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] VALID_NAME() { return GetTokens(LixirParser.VALID_NAME); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VALID_NAME(int i) {
			return GetToken(LixirParser.VALID_NAME, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADD() { return GetToken(LixirParser.ADD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_BRACKET() { return GetToken(LixirParser.OPEN_BRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Type_literalContext type_literal() {
			return GetRuleContext<Type_literalContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE_BRACKET() { return GetToken(LixirParser.CLOSE_BRACKET, 0); }
		public VARIABLE_ADD_CHILDContext(Variable_manipulationContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILixirVisitor<TResult> typedVisitor = visitor as ILixirVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVARIABLE_ADD_CHILD(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VARIABLE_ASSIGNMENTContext : Variable_manipulationContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] VALID_NAME() { return GetTokens(LixirParser.VALID_NAME); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VALID_NAME(int i) {
			return GetToken(LixirParser.VALID_NAME, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(LixirParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Method_callContext method_call() {
			return GetRuleContext<Method_callContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MathematicsContext mathematics() {
			return GetRuleContext<MathematicsContext>(0);
		}
		public VARIABLE_ASSIGNMENTContext(Variable_manipulationContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILixirVisitor<TResult> typedVisitor = visitor as ILixirVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVARIABLE_ASSIGNMENT(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VARIABLE_NAME_PROPContext : Variable_manipulationContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VALID_NAME() { return GetToken(LixirParser.VALID_NAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME_PROP() { return GetToken(LixirParser.NAME_PROP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(LixirParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LINE() { return GetToken(LixirParser.STRING_LINE, 0); }
		public VARIABLE_NAME_PROPContext(Variable_manipulationContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILixirVisitor<TResult> typedVisitor = visitor as ILixirVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVARIABLE_NAME_PROP(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VARIABLE_REMOVE_CHILDContext : Variable_manipulationContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] VALID_NAME() { return GetTokens(LixirParser.VALID_NAME); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VALID_NAME(int i) {
			return GetToken(LixirParser.VALID_NAME, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REMOVE() { return GetToken(LixirParser.REMOVE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LINE() { return GetToken(LixirParser.STRING_LINE, 0); }
		public VARIABLE_REMOVE_CHILDContext(Variable_manipulationContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILixirVisitor<TResult> typedVisitor = visitor as ILixirVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVARIABLE_REMOVE_CHILD(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VARIABLE_VALUE_PROPContext : Variable_manipulationContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] VALID_NAME() { return GetTokens(LixirParser.VALID_NAME); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VALID_NAME(int i) {
			return GetToken(LixirParser.VALID_NAME, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VALUE_PROP() { return GetToken(LixirParser.VALUE_PROP, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(LixirParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_BRACKET() { return GetToken(LixirParser.OPEN_BRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Type_literalContext type_literal() {
			return GetRuleContext<Type_literalContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE_BRACKET() { return GetToken(LixirParser.CLOSE_BRACKET, 0); }
		public VARIABLE_VALUE_PROPContext(Variable_manipulationContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILixirVisitor<TResult> typedVisitor = visitor as ILixirVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVARIABLE_VALUE_PROP(this);
			else return visitor.VisitChildren(this);
		}
	}
